# model-code

./: .gitignore  CLAUDE.md  README.md  build_model.py  compile.py  config.yaml  encoder.py  manifest.yaml  pyproject.toml
.github/workflows/: release.yml
benchmark/: BENCHMARK.md  run_benchmark.py  run_claude_benchmark.py  run_interactive_benchmark.py  test_cases.json
benchmark/results/: bare_haiku_20260321_095126.json  bare_haiku_20260321_095228.json  bare_haiku_20260321_095415.json  cc_bare_sonnet_20260323_080358.json  cc_bare_sonnet_20260323_145539.json  cc_bare_sonnet_20260323_154549.json  cc_bare_sonnet_20260323_201550.json  cc_bare_sonnet_20260323_210705.json  cc_combined_sonnet_20260323_080358.json  cc_combined_sonnet_20260323_145539.json  cc_combined_sonnet_20260323_154549.json  cc_combined_sonnet_20260323_201450.json  cc_combined_sonnet_20260323_201550.json  cc_combined_sonnet_20260323_210705.json  glyphh_haiku_20260321_094928.json  glyphh_haiku_20260321_095005.json  glyphh_haiku_20260321_095228.json  glyphh_haiku_20260321_095415.json  status.json
glyphh_code/: CLAUDE.md  compile.py  encoder.py  plugin.py
glyphh_code/hooks/: post-git-compile.sh  search-gate.sh
hooks/: enforce-glyphh-search.sh  post-commit-compile.sh
tests/: conftest.py  test_encoding.py  test_fastmcp.py  test_similarity.py
